# atarix

./: Makefile  Makefile.am  README.md  bootstrap  configure.ac
.github/: census-trigger.md  pull_request_template.md
.github/workflows/: apply-atx100-migration.yml  atx100-book.yml  autocommit.yml  check-md-links.yml  ci.yml  create-tag.yml  document-authority-census.yml  engineering-gate.yml  project-zero-inventory.yml  rtl-atx-spec-020.yml
docs/: address-space-architecture.md  backplane-spec.md  boot-firmware-architecture-v1.md  boot-information-block-v1.md  capability-model.md  card-health-model-v1.md  card-identity-eeprom.md  clock-reset-spec.md  core-doctrines.md  cpu-card-architecture-v1.md  cpu-local-dma-memory-v1.md  data-model-and-endianness-v1.md  data-model-and-endianness.md  design-rationale-history-v1.md  design.md  development-philosophy.md  discovery-rom-format-v1.md  dma-engine-v1.md  gnu-dev-tools-setup.md  identity-eeprom-v1.md  interrupt-architecture-v1.md  mailbox-protocol-v1.md  nubus-upa-influences-v1.md  register-map-v1.md  resource-type-registry-v1.md  rev-a-hardware-baseline.md  roadmap.md  routing-design-notes.md  security.md  service-model.md  supervisor-card-v1.md  supervisor-observability-contract-v1.md  system-spec-v1.md  test-write.md  testing-strategy.md  timing-observability-v1.md  toolchain.md  trust-model-v1.md
docs/adr/: ADR-0001-fabric-centric-architecture.md  ADR-0002-rp2350-selection.md  ADR-0009-observability-first.md  ADR-0012-abstraction-and-compatibility.md  ADR-0015-consume-catylist-aes-aems-authority-chain.md  ADR-00X-capability-evaluation-model.md  ADR-00Z-core-architectural-doctrines.md
docs/architecture/: ATX-SPEC-001-Security-Model.md  ATX-SPEC-002-Authority-Model.md  ATX-SPEC-003-Capability-Model.md  ATX-SPEC-004-Lifecycle-Model.md  ATX-SPEC-005-Mailbox-Model.md  ATX-SPEC-006-Object-Model.md  ATX-SPEC-007-Namespace-Model.md  ATX-SPEC-008-Directory-Service-Model.md  ATX-SPEC-009-Resource-Model.md  ATX-SPEC-010-Audit-Model.md  ATX-SPEC-011-Error-Model.md  ATX-SPEC-015-POSIX-Compatibility-Model.md  ATX-SPEC-018-Recovery-and-Reconciliation-Model.md  ATX-SPEC-019-Service-Model.md  ATX-SPEC-020-Hardware-Mailbox-Integration-Notes.md  ATX-SPEC-020-Hash-Table-and-Lookup-Acceleration-Model.md  ATX-SPEC-021-Memory-and-Data-Movement-Model.md  architecture-review-checklist.md  design-principles.md  directory-service.md  namespace-model.md  object-model.md  pillars.md
docs/design/: ATX-DESIGN-002-Architectural-Invariants.md  ATX-DESIGN-007-Security-Philosophy.md
docs/doctrine/: ARC-REVIEW.md  ARC-SEC.md
docs/engineering/: AES-SEC-001-log.md  AES-SEC-001-waivers.md  ATARIX-DEV-001-development-principles.md  Engineering-Gate.md  SECURE-C-CXX.md  closure-development-cycle.md
docs/research/: RESEARCH-BACKLOG.md
docs/reviews/: ATX-SPEC-015-Reconciliation-Review.md  Architecture-Review-002.md  Architecture-Review-003.md  architecture-review-template.md
docs/roadmap/: atarix-project-zero-inventory.md  document-authority-migration-audit.md  repository-extraction-plan.md
docs/verification/: ATX-SPEC-020-rtl-ci.md
evidence/atx-bib-001/: emulator-capture-v1.b64  emulator-capture-v1.sha256
include/atarix/: README.md  bib.h  bib_builder.h  bib_reader.h  capability.h  capability_engine.h  capability_policy.h  directory.h  discovery.h  discovery_database.h  discovery_parser.h  identity_eeprom.h  index.h  mailbox.h  memory.h  operations.h  resource_types.h  ring.h  rings.h  service_ids.h  sim_bib.h  sim_fabric.h  sim_mailbox.h  sim_node.h  sim_types.h
project-zero/: README.md
rtl/atarix/: ATX-SPEC-020-CI.md  README.md  atx_audit_log_window.v  atx_elias_fano_decoder.v  atx_krapivin_stepper.v  atx_northbridge_bus_shim.v  atx_scalar_probe_core.v  (+7 more)
scripts/: document_authority_census.py
sim/: README.md
src/: Makefile.am  README.md  memory.c
src/bib/: bib_builder.c  bib_reader.c
src/capability/: capability_evaluator.c  capability_policy.c
src/discovery/: discovery_database.c  discovery_iterator.c  discovery_parser.c  discovery_validate.c
src/emulator/discovery/: README.md
src/emulator/fabric/: README.md
src/emulator/mailbox/: README.md
src/firmware/monitor/: README.md
src/mailbox/: mailbox.c
src/ring/: ring.c
src/sim/: sim_bib.c  sim_fabric.c  sim_mailbox.c  sim_node.c
tests/: Makefile.am
tests/bib/: test_bib_builder.c  test_bib_emulator_evidence.sh  test_bib_reader.c  test_bib_vectors.c
tests/capability/: test_capability_delegation.c  test_capability_ownership.c  test_capability_respects_ring_boundary.c  test_capability_revocation.c  test_capability_ring_boundary.c  test_capability_validation.c  test_delegation_cannot_cross_ring_boundary.c  test_revoked_capability_still_denied_after_ring_check.c
tests/cpu/: README.md
tests/discovery/: discovery_test_utils.h  test_discovery_crc.c  test_discovery_header.c  test_discovery_iteration.c  test_discovery_parser_minimal.c  test_discovery_records.c  test_duplicate_handle.c  test_invalid_length.c  test_missing_end.c  test_unknown_record.c
tests/mailbox/: test_mailbox_crc.c  test_mailbox_duplicate.c  test_mailbox_max_payload.c  test_mailbox_out_of_order.c  test_mailbox_quarantine_isolation.c  test_mailbox_ring_restricted.c  test_mailbox_sequence.c  test_mailbox_supervisor_endpoint_denied.c  test_mailbox_unknown_type.c  test_mailbox_validation.c
tests/memory/: test_memory_descriptor.c
tests/reference/: README.md
tests/ring/: test_ring_downward_allowed.c  test_ring_quarantine_denied.c  test_ring_self_access.c  test_ring_supervisor_override.c  test_ring_upward_denied.c
tests/sim/: test_sim_bib_capture.c  test_sim_fabric_attach.c  test_sim_fabric_capacity.c  test_sim_fabric_duplicate.c  test_sim_fabric_lookup_missing.c  test_sim_node.c  test_sim_ping_pong.c  test_sim_reject_invalid.c  test_sim_version_query.c
tools/: Makefile.am  check-doc-index.py  check-md-links.py
tools/aems/: README.md  aems.py  build_atx100.py  build_docs_book.py  migrate_docs_to_atx100.py  spec_index.json
tools/bibdump/: bibdump.c
tools/mkdiscovery/: mkdiscovery.c
(+108 files in other folders)
