noinst_LIBRARIES = libatarix.a

libatarix_a_SOURCES = \
    discovery/discovery_database.c \
    discovery/discovery_iterator.c \
    discovery/discovery_validate.c \
    discovery/discovery_parser.c \
    capability/capability_evaluator.c \
    capability/capability_policy.c \
    mailbox/mailbox.c \
    sim/sim_node.c \
    sim/sim_mailbox.c

AM_CPPFLAGS = -I$(top_srcdir)/include
